syntax = "proto3";

package api.review.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "review-service/api/review/v1;v1";
option java_multiple_files = true;
option java_package = "api.review.v1";

service Review {
	// 创建评价
	rpc CreateReview (CreateReviewRequest) returns (CreateReviewReply) {
		option (google.api.http) = {
			post: "/v1/review",
			body: "*"
		};
	};
	// 获取评价
	rpc GetReview (GetReviewRequest) returns (GetReviewReply) {
		option (google.api.http) = {
			get: "/v1/review/{review_id}"
		};
	};
	// 审核评价
	rpc AuditReview (AuditReviewRequest) returns (AuditReviewReply) {
		option (google.api.http) = {
		  post: "/v1/review/audit",
		  body: "*"
		};
	};
}

// 评价信息
message ReviewInfo{
	int64 review_id = 1;
	int64 user_id = 2;
	int64 order_id = 3;
	int32 score = 4;
	int32 service_score = 5;
	int32 express_score = 6;
	string content = 7;
	string pic_info = 8;
	string video_info = 9;
	int32 status = 10;
}
// 创建评价的参数
message CreateReviewRequest {
	int64 user_id = 1 [(validate.rules).int64 = {gt: 0}]; 
	int64 order_id = 2 [(validate.rules).int64 = {gt: 0}];
	int32 score = 3 [(validate.rules).int32 = {in: [1, 2, 3, 4, 5]}];
	int32 service_score = 4 [(validate.rules).int32 = {in: [1, 2, 3, 4, 5]}];
	int32 express_score = 5 [(validate.rules).int32 = {in: [1, 2, 3, 4, 5]}];
	string content = 6 [(validate.rules).string = {min_len: 8, max_len: 255}];
	string pic_info = 7;
	string video_info = 8;
	bool anonymous = 9;
}
// 创建评价的回复
message CreateReviewReply {
	int64 review_id = 1;
}
// 获取评价的参数
message GetReviewRequest {
	int64 review_id = 1 [(validate.rules).int64 = {gt: 0}];
}
// 获取评价的回复
message GetReviewReply {
	ReviewInfo data = 1;
}
// 审核评价的参数
message AuditReviewRequest {
	int64 review_id = 1 [(validate.rules).int64 = {gt: 0}];
	int32 status = 2 [(validate.rules).int32 = {gt: 0}];
	string op_user = 3 [(validate.rules).string = {min_len: 2}];
	string op_reason = 4 [(validate.rules).string = {min_len: 2}];
	optional string op_remarks = 5;
}
// 审核评价的回复
message AuditReviewReply {
	int64 review_id = 1;
	int32 status = 2;
}
